--- a/src/component/list/List.css
+++ b/src/component/list/List.css
@@ -3,23 +3,24 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  padding: 10px;
 }
 
-.card {
+/* .card {
   border: 1px solid #ddd;
   border-radius: 10px;
   width: 300px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.card-image {
+/* .card-image {
   width: 100%;
   height: 200px;
   object-fit: cover;
-}
+} */
 
-.card-content {
+/* .card-content {
   padding: 10px;
   text-align: left;
 }
@@ -34,4 +35,4 @@
 .price,
 .rating {
   margin: 5px 0;
-}
+} */
