--- a/src/component/category/category.css
+++ b/src/component/category/category.css
@@ -9,15 +9,18 @@
   display: flex;
   overflow-x: auto;
   scroll-behavior: smooth;
-  gap: 16px;
-  padding: 10px;
+  gap: 20px;
+  padding: 15px;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
 }
 
 .category-item {
   text-align: center;
   flex: 0 0 auto;
-  width: 120px;
+  width: 50px;
   cursor: pointer;
+  font-size: 12px;
 }
 
 .category-item img {
@@ -37,10 +40,11 @@
   border: none;
   padding: 10px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 16px;
   position: absolute;
+  border-radius: 50%;
   z-index: 1;
-  top: 50%;
+  top: 45%;
   transform: translateY(-50%);
 }
 
