--- a/src/component/category/GridRow.css
+++ b/src/component/category/GridRow.css
@@ -8,17 +8,17 @@
 }
 
 .scroll-button {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.2);
   border: none;
   color: white;
   font-size: 1.5rem;
-  padding: 5px 10px;
+  padding: 3px 8px;
   border-radius: 50%;
   cursor: pointer;
   position: absolute;
   z-index: 2;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 40%;
+  transform: translateY(-45%);
 }
 
 .scroll-button.left {
@@ -33,13 +33,12 @@
   display: flex;
   gap: 10px;
   overflow-x: auto;
-  padding: 30px;
-  scrollbar-width: none; /* For Firefox */
-  -ms-overflow-style: none; /* For IE and Edge */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .grid-row::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Opera */
+  display: none;
 }
 
 .category-item {
@@ -48,7 +47,7 @@
   text-align: center;
   cursor: pointer;
   transition: transform 0.2s ease, border-bottom 0.2s ease;
-  padding-bottom: 3px; /* 추가된 공간 */
+  padding-bottom: 3px;
   padding-right: 10px;
 }
 
@@ -63,13 +62,11 @@
   color: #333;
 }
 
-/* 활성화된 카테고리: 하단 검정색 선 */
 .category-item.active {
   font-weight: bold;
   border-bottom: 3px solid black;
 }
 
-/* 마우스 호버 시: 하단 회색 선 */
 .category-item:hover {
   border-bottom: 3px solid gray;
 }
