--- a/src/component/category/GridRow.css
+++ b/src/component/category/GridRow.css
@@ -3,7 +3,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  padding: 10px 32px;
+  padding: 20px 32px;
   box-sizing: border-box;
 }
 
@@ -46,9 +46,10 @@
   width: 80px;
   text-align: center;
   cursor: pointer;
-  transition: transform 0.2s ease, border-bottom 0.2s ease;
-  padding-bottom: 3px;
+  transition: transform 0.2s ease;
+  padding-bottom: 6px;
   padding-right: 10px;
+  border-bottom: 3px solid transparent;
 }
 
 .category-item img {
@@ -62,11 +63,26 @@
   color: #333;
 }
 
-.category-item.active {
-  font-weight: bold;
-  border-bottom: 3px solid black;
+.category-item {
+  position: relative;
 }
 
-.category-item:hover {
-  border-bottom: 3px solid gray;
+.category-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0 auto;
+  width: 80%;
+  height: 2px;
+  background-color: transparent;
+  transition: background-color 0.2s ease;
+}
+
+.category-item:hover::after {
+  background-color: rgb(196, 196, 196);
+}
+
+.category-item.active::after {
+  background-color: black;
 }
