--- a/src/component/detail/AccommodationInfo.css
+++ b/src/component/detail/AccommodationInfo.css
@@ -3,6 +3,7 @@
   gap: 48px;
   padding: 24px;
   margin: 0 auto;
+  text-align-last: left;
 }
 
 .accommodation-info {
@@ -170,6 +171,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  padding: 20px;
+  font-size: 15px;
 }
 
 .modal-content {
@@ -181,4 +184,17 @@
   overflow-y: auto;
   word-wrap: break-word;
   overflow-wrap: break-word;
+}
+
+.full-description {
+  font-size: 14px;
+  border-bottom: 1px solid #717171;
+  padding: 5px;
+}
+
+.modal-content button {
+  background-color: #e6e6e6;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
