--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -119,6 +119,7 @@
   flex: 1;
   transition: all 0.2s ease-in-out;
   position: relative;
+  text-align: left;
 }
 
 .search-item:hover {
@@ -144,6 +145,7 @@
   font-size: 12px;
   color: #888;
   margin-bottom: 4px;
+  text-align-last: left;
 }
 
 .search-item__input {
@@ -153,6 +155,7 @@
   color: #333;
   width: 100%;
   background: none;
+  text-align: left;
 }
 
 .header__searchButton {
